<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <EditText android:id="@+id/searchQuery"
              android:layout_height="wrap_content"
              android:layout_width="fill_parent"
              android:padding="15dp"
              android:singleLine="true"
              android:lines="1"
              android:scrollHorizontally="true"
              android:inputType="text"
              android:hint="@string/search_hint"
              android:selectAllOnFocus="true"/>

    <LinearLayout android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:padding="10dp">

        <TextView android:id="@+id/searchEntityFilters"
                  android:layout_height="wrap_content"
                  android:layout_width="0dp"
                  android:layout_weight="1"
                  android:textSize="16sp"
                  android:text="@string/search_entity_filters"/>

        <Spinner android:id="@+id/searchEntitySpinner"
                 android:layout_height="wrap_content"
                 android:layout_width="0dp"
                 android:layout_weight="2"
                 android:textSize="16sp"
                 android:entries="@array/search_entity"/>

    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:padding="10dp">

        <TextView android:id="@+id/searchFieldFilters"
                  android:layout_height="wrap_content"
                  android:layout_width="0dp"
                  android:layout_weight="1"
                  android:textSize="16sp"
                  android:text="@string/search_field_filters"/>

        <Spinner android:id="@+id/searchFieldSpinner"
                 android:layout_height="wrap_content"
                 android:layout_width="0dp"
                 android:layout_weight="2"
                 android:textSize="16sp"
                 android:entries="@array/search_field"/>

    </LinearLayout>

</LinearLayout>