<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

    <uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/companyPtr"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ScrollView android:id="@+id/companyContents"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_alignParentTop="true"
                    android:background="@android:color/white"
                    android:visibility="gone">

            <LinearLayout android:orientation="vertical"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content">

                <!-- <TextView android:id="@+id/companyHeaderLabel"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:text="@string/company_header"
                          android:gravity="center"
                          android:textColor="@android:color/white"
                          android:background="@color/crunchbase"
                          android:padding="4dp"/> -->

                <LinearLayout android:id="@+id/companyHeader"
                              android:orientation="horizontal"
                              android:layout_height="wrap_content"
                              android:layout_width="fill_parent">

                    <ImageView android:id="@+id/companyImage"
                               android:src="@drawable/no_image_placeholder"
                               android:contentDescription="@string/company_image"
                               android:layout_height="110dp"
                               android:layout_width="110dp"
                               android:padding="2dp"
                               android:paddingRight="8dp"
                               android:scaleType="centerInside"/>

                    <LinearLayout android:orientation="vertical"
                                  android:layout_height="wrap_content"
                                  android:layout_width="fill_parent"
                                  android:padding="4dp"
                                  android:layout_gravity="center_vertical">

                        <TextView android:id="@+id/companyName"
                                  android:layout_width="fill_parent"
                                  android:layout_height="wrap_content"
                                  android:textSize="15sp"
                                  android:paddingBottom="4dp"
                                  android:textColor="@android:color/black"/>

                        <TextView android:id="@+id/companyUrl"
                                  android:layout_width="fill_parent"
                                  android:layout_height="wrap_content"
                                  android:textSize="12sp"
                                  android:textColor="@android:color/darker_gray"/>

                        <TextView android:id="@+id/companyFounded"
                                  android:layout_width="fill_parent"
                                  android:layout_height="wrap_content"
                                  android:textSize="12sp"
                                  android:textColor="@android:color/darker_gray"/>

                        <TextView android:id="@+id/companyEmployees"
                                  android:layout_width="fill_parent"
                                  android:layout_height="wrap_content"
                                  android:textSize="12sp"
                                  android:textColor="@android:color/darker_gray"/>

                        <TextView android:id="@+id/companyTotalMoneyRaised"
                                  android:layout_width="fill_parent"
                                  android:layout_height="wrap_content"
                                  android:textSize="12sp"
                                  android:textColor="@android:color/darker_gray"/>

                    </LinearLayout>

                </LinearLayout>

                <TextView android:id="@+id/companyPresenceLabel"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:text="@string/company_presence"
                          android:gravity="center"
                          android:textColor="@android:color/white"
                          android:background="@color/crunchbase"
                          android:padding="1dp"/>

                <LinearLayout android:id="@+id/companyPresenceHolder"
                              android:orientation="horizontal"
                              android:layout_height="wrap_content"
                              android:layout_width="fill_parent"
                              android:layout_gravity="center_vertical">

                    <Button android:id="@+id/companyCrunchbaseUrl"
                            android:layout_width="0dp"
                            android:layout_height="34sp"
                            android:layout_weight="1"
                            android:text="@string/company_crunchbase_url"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:textColor="@color/crunchbase"
                            android:shadowColor="@android:color/transparent"
                            android:background="@android:color/white"/>

                    <Button android:id="@+id/companyBlogUrl"
                            android:layout_width="0dp"
                            android:layout_height="34sp"
                            android:layout_weight="1"
                            android:text="@string/company_blog_url"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:textColor="@color/crunchbase"
                            android:shadowColor="@android:color/transparent"
                            android:background="@android:color/white"/>

                    <Button android:id="@+id/companyTwitter"
                            android:layout_width="0dp"
                            android:layout_height="34sp"
                            android:layout_weight="1"
                            android:text="@string/company_twitter"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:textColor="@color/crunchbase"
                            android:shadowColor="@android:color/transparent"
                            android:background="@android:color/white"/>

                    <Button android:id="@+id/companyEmail"
                            android:layout_width="0dp"
                            android:layout_height="34sp"
                            android:layout_weight="1"
                            android:text="@string/company_email"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:textColor="@color/crunchbase"
                            android:shadowColor="@android:color/transparent"
                            android:background="@android:color/white"/>

                </LinearLayout>

                <TextView android:id="@+id/companyOverviewLabel"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:text="@string/company_overview"
                          android:gravity="center"
                          android:textColor="@android:color/white"
                          android:background="@color/crunchbase"
                          android:padding="1dp"/>

                <TextView android:id="@+id/companyOverview"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:padding="2dp"/>

                <TextView android:id="@+id/companyPeopleLabel"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:text="@string/company_people"
                          android:gravity="center"
                          android:textColor="@android:color/white"
                          android:background="@color/crunchbase"
                          android:padding="1dp"/>

                <LinearLayout android:id="@+id/companyPeopleHolder"
                              android:orientation="vertical"
                              android:layout_height="wrap_content"
                              android:layout_width="fill_parent"/>

                <TextView android:id="@+id/companyFundingLabel"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:text="@string/company_funding"
                          android:gravity="center"
                          android:textColor="@android:color/white"
                          android:background="@color/crunchbase"
                          android:padding="1dp"/>

                <LinearLayout android:id="@+id/companyFundingHolder"
                              android:orientation="vertical"
                              android:layout_height="wrap_content"
                              android:layout_width="fill_parent"/>

            </LinearLayout>

        </ScrollView>

    </uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout>

</RelativeLayout>